--- a/app/src/main/res/layout/dialog_logout.xml
+++ b/app/src/main/res/layout/dialog_logout.xml
@@ -19,16 +19,18 @@
             android:id="@+id/logoutDialogText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/helveticaneue_medium"
+            android:fontFamily="@font/robotomedium"
             android:padding="20dp"
             android:text="Are you sure you want to logout?"
             android:textColor="#000"
-            android:textSize="24dp"
+            android:textSize="22dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/buttomlayoutslogoutdiag"/>
 
         <LinearLayout
+            android:id="@+id/buttomlayoutslogoutdiag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -41,9 +43,10 @@
                 android:id="@+id/cancel_logout_button"
                 android:layout_width="0dp"
                 android:layout_height="63dp"
+                android:layout_marginRight="0.02dp"
                 android:layout_weight="1" android:layout_marginLeft="2dp" android:layout_marginBottom="2dp"
                 android:background="@drawable/cancelbrnnext"
-                android:fontFamily="@font/robotomedium"
+                android:fontFamily="@font/robotoregular"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:text="Cancel"
                 android:textColor="#000"
@@ -57,7 +60,7 @@
                 android:layout_marginBottom="2dp"
                 android:layout_weight="1"
                 android:background="@drawable/logoutbrndiag"
-                android:fontFamily="@font/robotomedium"
+                android:fontFamily="@font/robotoregular"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:text="Logout"
                 android:textColor="#ff0000"
