--- a/app/src/main/res/layout/fragment_settings_fragment.xml
+++ b/app/src/main/res/layout/fragment_settings_fragment.xml
@@ -210,16 +210,14 @@
         android:id="@+id/buttonLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="6dp"
         android:text="Logout"
         android:textSize="16dp"
         android:textAllCaps="false"
-        android:fontFamily="@font/helveticaneu_bold"
+        android:fontFamily="@font/robotoregular"
         android:textColor="#3582FF"
         android:background="@android:color/transparent"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
