--- a/app/src/main/res/layout/fragment_about_us_fragment.xml
+++ b/app/src/main/res/layout/fragment_about_us_fragment.xml
@@ -21,6 +21,7 @@
             android:layout_height="30dp"
             android:layout_marginTop="36dp"
             android:layout_marginRight="20dp"
+            android:foreground="?android:attr/selectableItemBackground"
             android:background="@drawable/aboutusback"
             android:text="Back"
             android:textAllCaps="false"
