--- a/app/src/main/res/layout/fragment_about_us_fragment.xml
+++ b/app/src/main/res/layout/fragment_about_us_fragment.xml
@@ -372,7 +372,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/profile" />
+                        app:srcCompat="@drawable/panshul" />
 
                     <TextView
                         android:id="@+id/panshulName"
