--- a/app/src/main/res/layout/fragment_homefragment.xml
+++ b/app/src/main/res/layout/fragment_homefragment.xml
@@ -54,12 +54,11 @@
                 android:scrollbars="horizontal">
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/teamsCardview"
+                    android:id="@+id/domainsCardview"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    app:cardCornerRadius="10dp"
                     android:foregroundGravity="center_horizontal"
-                    >
+                    app:cardCornerRadius="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -73,11 +72,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:padding="10dp"
-                            android:text="Teams"
+                            android:text="Domain"
                             android:textSize="20dp" />
 
                     </LinearLayout>
-
 
                 </androidx.cardview.widget.CardView>
 
@@ -85,10 +83,9 @@
                     android:id="@+id/projectsCardview"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    app:cardCornerRadius="10dp"
-                    android:foregroundGravity="center_horizontal"
                     android:layout_marginLeft="10dp"
-                    >
+                    android:foregroundGravity="center_horizontal"
+                    app:cardCornerRadius="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -113,10 +110,9 @@
                     android:id="@+id/eventsCardview"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    app:cardCornerRadius="10dp"
-                    android:foregroundGravity="center_horizontal"
                     android:layout_marginLeft="10dp"
-                    >
+                    android:foregroundGravity="center_horizontal"
+                    app:cardCornerRadius="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -136,6 +132,36 @@
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/teamsCardview"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:foregroundGravity="center_horizontal"
+                    >
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:background="@color/recruitment_grey"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:padding="10dp"
+                            android:text="Teams"
+                            android:textSize="20dp" />
+
+                    </LinearLayout>
+
+
+                </androidx.cardview.widget.CardView>
+
             </LinearLayout>
 
         </HorizontalScrollView>
