--- a/app/src/main/res/drawable/faqcardbg.xml
+++ b/app/src/main/res/drawable/faqcardbg.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#1338be"/>
+    <solid android:color="@color/white"/>
+    <stroke android:color="@color/recruitment_grey" android:width="1.2dp"/>
     <corners android:radius="10dp"/>
+
 </shape>
