--- a/app/src/main/res/layout/fragment_settings_fragment.xml
+++ b/app/src/main/res/layout/fragment_settings_fragment.xml
@@ -63,7 +63,7 @@
                 android:textSize="12sp"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:fontFamily="@font/robotoregular"
-                android:text="Edit Profile"
+                android:text="View Profile"
                 android:textColor="#000000"
                 android:background="@drawable/editprofilebtnbg"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,6 @@
                 android:textColor="#000000"
                 android:textSize="14dp"
                 app:layout_constraintStart_toStartOf="parent"
-
                 app:layout_constraintTop_toBottomOf="@+id/profileName" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
