--- a/app/src/main/res/layout/fragment_about_us_fragment.xml
+++ b/app/src/main/res/layout/fragment_about_us_fragment.xml
@@ -321,7 +321,7 @@
                         app:layout_constraintTop_toBottomOf="@id/arupamDesig">
 
                         <ImageView
-                            android:id="@+id/arupamLinkedin"
+                            android:id="@+id/keshavLinkedin"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_marginLeft="15dp"
