--- a/app/src/main/res/layout/activity_recruitment_signup.xml
+++ b/app/src/main/res/layout/activity_recruitment_signup.xml
@@ -49,7 +49,7 @@
         android:background="@drawable/signupedittext"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Full name"
-        android:inputType="textPersonName"
+        android:inputType="textPersonName|textCapWords"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
         android:background="@drawable/signupedittext"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="VIT Registration Number"
-        android:inputType="textPersonName"
+        android:inputType="textPersonName|textCapCharacters"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,13 +123,13 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Github Profile Link"
         android:inputType="textPersonName"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
