--- a/app/src/main/res/layout/fragment_faq_d.xml
+++ b/app/src/main/res/layout/fragment_faq_d.xml
@@ -46,8 +46,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_faqD"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="30dp"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Designtesthead" />
